--- a/index.html
+++ b/index.html
@@ -181,6 +181,59 @@ efektif.
         <h2 class="heading">Projects and Certificate</h2>
         <div class="container">
             <div class="row">
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project/hotspot_login.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Hotspot Mikrotik Login</h3>
+                        <a href="https://www.linkedin.com/in/arisadityan/details/projects/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project --> 
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project/invoice_app.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Invoice Apps</h3>
+                        <a href="https://www.linkedin.com/in/arisadityan/details/projects/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project --> 
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project/online_assesment1.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Online Assesment</h3>
+                        <a href="https://www.linkedin.com/in/arisadityan/details/projects/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project --> 
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project/ordering_apps.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Ordering Apps</h3>
+                        <a href="https://www.linkedin.com/in/arisadityan/details/projects/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project --> 
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project/Dolibar Erp.jpeg" />
@@ -261,7 +314,7 @@ efektif.
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project/Asalta Web.jpeg" />
+                        <img src="images/project/asalta_web.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -349,6 +402,8 @@ efektif.
             <li>    Ethical Hacker </li>
                 <li>    Modern AI</li>
                     <li>    Introduction Cybersecurity </li>
+                      <li>    CCNP Enterprise: Core Networking </li>
+                          <li>    CCNP Enterprise: Advanced Routing </li>
                         <li>    Endpoint Security </li>
                             <li>   Dasar Pemrograman Web</li>
                                 <li>    Laravel </li>
